Apply button, Rside pics, tried to fix header overlap
Broken. Added bit to fix header overlap - still there on firefox, and now right columns are scrambled (?)

--- a/teststyle.css
+++ b/teststyle.css
@@ -20,7 +20,8 @@
 }
 
 /* fades to this color, for behind main body columns */
-body {
+html, body { 
+	height: 100%; width: 100%; margin: 0; 
 	background-color: #ffe4d0;
 	margin: 0;	/* close that gap between div and window margin*/
 }
@@ -36,6 +37,16 @@ img {
 	border: 3px solid #804C00;
 }
 
+.leftMain img {
+	float: left;
+	margin-right: 1%;
+}
+.rightMain p img, .rightMainSecond p img {
+	margin-left: 20%;
+	border-radius: 100%;
+}
+
+
 /* light orange bar that fades, adds whitespace */
 hr {
 	color: #FF8B33;
@@ -48,8 +59,11 @@ hr {
 
 /**********************************************************
 *					Navigation Bar
+* Button type resued for the "Apply/Join" Button on About
+* us page
 **********************************************************/
-.nav ul {
+
+.nav ul, #join ul {
 
 	/* basics */
 	float: right;
@@ -62,7 +76,7 @@ hr {
 }
 
 
-.nav li {
+.nav li, #join li {
 	/* basic set up of blocks */
 	display: inline-block;
 	list-style: none;
@@ -73,7 +87,7 @@ hr {
 	text-align: center;
 }
 
-.nav a{
+.nav a, #join a {
 
 	/* shape the boxes */
   	display: block;
@@ -129,7 +143,6 @@ hr {
 }
 
 
-
 /********************************************************
 *				Main body 
 ********************************************************/
@@ -143,7 +156,7 @@ hr {
 	margin-left: 5%;
 	margin-top: 1%;
 	margin-right: 1%;
-	margin-bottom: 5%;
+	margin-bottom: 10%;
 
 	/* pad it out */
 	padding: 30px 20px 20px 20px;
@@ -218,7 +231,7 @@ hr {
 }
 
 .panel {
-	padding: 50px;
+	padding: 20px;
 	display: none;
 }
 
@@ -237,9 +250,12 @@ hr {
 }
 
 .panel2 {
-	padding: 50px;
+	padding: 20px;
 	display: none;
 }
+
+
+
 /*******************************************************
 *			Text Types
 ********************************************************/
@@ -266,6 +282,6 @@ h2{
 }
 
 
-h4{
+h3, h4{
 	color: #804C00;
 }
